<resources>
    <string name="app_name">My Movies App</string>
    <string name="movie_image">Movie Image</string>
    <string name="title">Title</string>
    <string name="user_rating">User Rating:</string>
    <string name="overview">Overview</string>
    <string name="release_date">Release date:</string>
    <string name="yy_mm_dd">yy/mm/dd</string>
    <string name="_10_0">10.0</string>
    <string name="sort_by_popularity">Sort by Popularity</string>
    <string name="sort_by_top_rating">Sort by top rating</string>
    <string name="my_favourites">My Favourites</string>
    <string name="reviews">Reviews</string>
</resources>
