<?xml version="1.0" encoding="utf-8"?>
<ScrollView    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lemubit.lemuel.popular_movies_stage1.Movie_detail"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.lemubit.lemuel.popular_movies_stage1.Movie_detail">


    <ImageView
        android:layout_weight="1"
        android:scaleType="fitXY"
        android:contentDescription="@string/movie_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
android:layout_centerHorizontal="true"
        android:id="@+id/movie_image"
        />

    <TextView
        android:textStyle="bold"
        android:id="@+id/movie_title_txt"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="58dp"
        android:hint="@string/title"
        android:layout_below="@+id/movie_image"
        android:layout_alignParentStart="true" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:layout_below="@+id/movie_title_txt"
        android:layout_alignParentStart="true"
        android:id="@+id/overview_scroll"
        tools:context="com.lemubit.lemuel.popular_movies_stage1.Movie_detail"
        >

        <TextView
            android:id="@+id/overview_txt"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/movie_title_txt"
            android:text="@string/overview"
            android:textSize="20sp"
            android:textStyle="italic" />
    </ScrollView>

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:textStyle="bold"
        android:layout_alignStart="@+id/movie_title_txt"
        android:layout_below="@+id/movie_title_txt"
        android:layout_marginTop="18dp"
        android:text="@string/user_rating"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/user_rating_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rating_circle"
        android:gravity="center_vertical"
        android:text="@string/_10_0"
        android:textAlignment="center"
        android:textColor="@color/rating_text"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/rating"
        android:layout_alignBottom="@+id/rating"
        android:layout_toEndOf="@+id/date" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/release_date"
android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/overview_scroll"
        android:layout_alignStart="@+id/rating" />

    <TextView
        android:id="@+id/release_date_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/yy_mm_dd"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/date"
        android:layout_alignBottom="@+id/date"
        android:layout_toEndOf="@+id/date"
        android:layout_marginStart="24dp" />


</RelativeLayout>
</ScrollView>